--- a/.github/workflows/ci_cd_workflow.yaml
+++ b/.github/workflows/ci_cd_workflow.yaml
@@ -2,8 +2,15 @@ name: CI/CD workflow
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ main ]
+    inputs:
+      steps:
+        description: 'Choose which steps to run'
+        required: true
+        type: choice
+        options:
+          - integration
+          - all
+        default: 'all'
 
 env:
   AWS_REGION: us-east-1
@@ -14,6 +21,7 @@ jobs:
   integration:
     name: checks_and_tests
     runs-on: ubuntu-latest
+    if: ${{ inputs.steps == 'all' || inputs.steps == 'integration' }}
     steps:
       - name: Checkout code repo
         uses: actions/checkout@v4
@@ -60,6 +68,7 @@ jobs:
     name: build_and_deploy
     runs-on: ubuntu-latest
     needs: integration
+    if: ${{ inputs.steps == 'all' && needs.integration.result == 'success' }}
 
     permissions:
       id-token: write
@@ -85,12 +94,10 @@ jobs:
 
       - name: Download Model Artifacts
         run: |
-          export PYTHONPATH=$PYTHONPATH:$(pwd)/src
           uv run src/scripts/download_artifacts.py
 
       - name: Convert Models to ONNX
         run: |
-          export PYTHONPATH=$PYTHONPATH:$(pwd)/src
           uv run src/scripts/export_classifier_to_onnx.py
           uv run src/scripts/export_sentence_transformer_to_onnx.py
 
@@ -109,6 +116,7 @@ jobs:
           docker build -t $REPOSITORY:$IMAGE_TAG -f Dockerfile .
           docker tag $REPOSITORY:$IMAGE_TAG $REGISTRY/$REPOSITORY:$IMAGE_TAG
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          echo "Successfully pushed: $REGISTRY/$REPOSITORY:$IMAGE_TAG"
 
       - name: Setup AWS SAM
         uses: aws-actions/setup-sam@v2
